--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.sh
 
 cfbot
+main
 # Test binary, built with `go test -c`
 *.test
 
@@ -16,4 +17,4 @@ cfbot
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-cfbot.json
+*.json
